--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       max-width: 100%;
     }
 
-    /* 헤더 극단 컴팩트화 */
+    /* 헤더 컴팩트 */
     header {
       padding: 0.5rem 1rem;
     }
@@ -232,7 +232,7 @@
 </head>
 <body class="min-h-screen flex flex-col">
 
-  <!-- 상단 헤더 (sticky 유지, 높이 최소화) -->
+  <!-- 헤더 -->
   <header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50">
     <div class="header-container max-w-7xl mx-auto">
       <div class="header-left">
@@ -340,19 +340,149 @@
             </div>
           </section>
 
-          <!-- 미국 주식, 한국 주식, 크립토 섹션도 동일하게 min-h, p-3 등으로 컴팩트 조정 -->
-          <!-- (생략 - 나머지 섹션은 이전 코드와 동일하게 유지하되, p-5 → p-4, text-lg → text-base 등으로 조정 가능) -->
+          <!-- 미국 주식 -->
+          <section class="card p-5 space-y-3 flex flex-col">
+            <h2 class="section-title">미국 주식</h2>
+            <div class="flex-grow space-y-3 flex flex-col">
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">S&P 500</div>
+                <div class="mt-1">
+                  <div class="text-xl font-bold">5,842.01</div>
+                  <div class="text-xs negative flex justify-center items-center space-x-1">
+                    <i class="fas fa-arrow-trend-down"></i>
+                    <span>-0.38% (-22.31)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">NASDAQ 100</div>
+                <div class="mt-1">
+                  <div class="text-xl font-bold">498.75</div>
+                  <div class="text-xs negative flex justify-center items-center space-x-1">
+                    <i class="fas fa-arrow-trend-down"></i>
+                    <span>-0.62% (-3.10)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3">
+                <h3 class="text-base font-semibold text-center mb-1">공포 탐욕 지수</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(62 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                  <div class="gauge-labels">
+                    <span>Extreme Fear</span>
+                    <span>Extreme Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-xl font-bold mt-1">62</div>
+                <div class="text-xs text-center">탐욕</div>
+              </div>
+            </div>
+          </section>
+
+          <!-- 한국 주식 -->
+          <section class="card p-5 space-y-3 flex flex-col">
+            <h2 class="section-title">한국 주식</h2>
+            <div class="flex-grow space-y-3 flex flex-col">
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">코스피</div>
+                <div class="mt-1">
+                  <div class="text-xl font-bold">2,612.45</div>
+                  <div class="text-xs positive flex justify-center items-center space-x-1">
+                    <i class="fas fa-arrow-trend-up"></i>
+                    <span>+0.85% (+22.10)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">코스닥</div>
+                <div class="mt-1">
+                  <div class="text-xl font-bold">842.18</div>
+                  <div class="text-xs positive flex justify-center items-center space-x-1">
+                    <i class="fas fa-arrow-trend-up"></i>
+                    <span>+1.12% (+9.32)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3">
+                <h3 class="text-base font-semibold text-center mb-1">공포 탐욕 지수</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(79.9 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                  <div class="gauge-labels">
+                    <span>V.Fear</span>
+                    <span>V.Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-xl font-bold mt-1">79.9</div>
+                <div class="text-xs text-center">극단적 탐욕</div>
+              </div>
+            </div>
+          </section>
+
+          <!-- 크립토 -->
+          <section class="card p-5 space-y-3 flex flex-col">
+            <h2 class="section-title">크립토</h2>
+            <div class="flex-grow space-y-3 flex flex-col">
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">비트코인</div>
+                <div class="mt-1">
+                  <div class="flex items-baseline justify-center space-x-2 flex-wrap number-container">
+                    <div class="text-lg font-bold">$98,450</div>
+                    <div class="text-base font-bold">₩135,245,000</div>
+                  </div>
+                  <div class="text-xs positive flex justify-center items-center space-x-1 mt-1">
+                    <i class="fas fa-arrow-trend-up"></i>
+                    <span>+2.45% (+$2,350)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3 text-center flex flex-col justify-between min-h-[110px]">
+                <div class="text-base font-semibold">이더리움</div>
+                <div class="mt-1">
+                  <div class="flex items-baseline justify-center space-x-2 flex-wrap number-container">
+                    <div class="text-lg font-bold">$3,820</div>
+                    <div class="text-base font-bold">₩5,145,000</div>
+                  </div>
+                  <div class="text-xs positive flex justify-center items-center space-x-1 mt-1">
+                    <i class="fas fa-arrow-trend-up"></i>
+                    <span>+1.88% (+$70)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card p-3">
+                <h3 class="text-base font-semibold text-center mb-1">공포 탐욕 지수</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(74 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                  <div class="gauge-labels">
+                    <span>Extreme Fear</span>
+                    <span>Extreme Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-xl font-bold mt-1">74</div>
+                <div class="text-xs text-center">탐욕</div>
+              </div>
+            </div>
+          </section>
 
         </div>
       </div>
 
+      <!-- 하단 여백 -->
       <div class="card p-5 text-center text-gray-400 mt-6 max-w-7xl mx-auto">
         실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
       </div>
     </main>
   </div>
 
-  <!-- 테마 토글 스크립트 -->
+  <!-- 테마 토글 -->
   <script>
     const toggleBtn = document.getElementById('theme-toggle');
     const icon = document.getElementById('theme-icon');
