--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
       max-width: 100%;
     }
 
-    /* 헤더 컴팩트 */
+    /* 헤더 & 지표 카드 극단적으로 얇게 */
     header {
-      padding: 0.5rem 1rem;
+      padding: 0.4rem 1rem;
     }
 
     .header-container {
@@ -173,59 +173,68 @@
       align-items: center;
       justify-content: space-between;
       flex-wrap: nowrap;
-      gap: 1rem;
-      max-height: 60px;
+      gap: 0.75rem;
+      max-height: 52px;
     }
 
     .header-left h1 {
-      font-size: 1.75rem;
+      font-size: 1.6rem;
       margin: 0;
+      line-height: 1.1;
     }
 
     .header-left p {
-      font-size: 0.75rem;
-      margin: 0.25rem 0 0;
+      font-size: 0.7rem;
+      margin: 0.15rem 0 0;
+      line-height: 1;
     }
 
     .header-right {
       display: flex;
       align-items: center;
-      gap: 0.4rem;
+      gap: 0.35rem;
       flex-wrap: nowrap;
     }
 
     .indicator-card {
-      padding: 0.35rem 0.6rem;
-      min-width: 90px;
-      font-size: 0.8rem;
-      line-height: 1.1;
+      padding: 0.25rem 0.5rem;
+      min-width: 85px;
+      font-size: 0.75rem;
+      line-height: 1.05;
+      text-align: center;
     }
 
     .indicator-card .label {
-      font-size: 0.6rem;
-      opacity: 0.8;
+      font-size: 0.55rem;
+      opacity: 0.75;
+      line-height: 1;
+      margin-bottom: 0.1rem;
     }
 
     .indicator-card .value {
-      font-size: 1rem;
-      font-weight: bold;
+      font-size: 0.95rem;
+      font-weight: 700;
+      line-height: 1.1;
     }
 
     .indicator-card .change {
-      font-size: 0.65rem;
-      margin-top: 0.1rem;
+      font-size: 0.6rem;
+      line-height: 1;
+      margin-top: 0.05rem;
     }
 
     @media (max-width: 1024px) {
       .header-container {
         flex-wrap: wrap;
+        gap: 0.5rem;
       }
       .header-right {
         flex-wrap: wrap;
-        justify-content: flex-end;
+        gap: 0.3rem;
       }
       .indicator-card {
-        min-width: 80px;
+        min-width: 78px;
+        padding: 0.2rem 0.45rem;
       }
     }
   </style>
@@ -475,14 +484,13 @@
         </div>
       </div>
 
-      <!-- 하단 여백 -->
       <div class="card p-5 text-center text-gray-400 mt-6 max-w-7xl mx-auto">
         실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
       </div>
     </main>
   </div>
 
-  <!-- 테마 토글 -->
+  <!-- 테마 토글 스크립트 -->
   <script>
     const toggleBtn = document.getElementById('theme-toggle');
     const icon = document.getElementById('theme-icon');
