--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
       max-width: 100%;
     }
 
-    /* 헤더 & 지표 카드 수정 핵심 */
+    /* 헤더 & 지표 카드 - 가독성 향상 버전 */
     header {
-      padding: 0.4rem 1rem;
+      padding: 0.5rem 1rem;
     }
 
     .header-container {
@@ -173,39 +173,39 @@
       align-items: center;
       justify-content: space-between;
       flex-wrap: nowrap;
-      gap: 0.75rem;
-      max-height: 52px;
-      height: 52px;
+      gap: 1rem;
+      max-height: 64px;
+      height: 64px;
       overflow: hidden;
     }
 
     .header-left h1 {
-      font-size: 1.6rem;
+      font-size: 1.75rem;
       margin: 0;
-      line-height: 1.1;
+      line-height: 1.15;
     }
 
     .header-left p {
-      font-size: 0.7rem;
-      margin: 0.15rem 0 0;
-      line-height: 1;
+      font-size: 0.8rem;
+      margin: 0.25rem 0 0;
+      line-height: 1.1;
     }
 
     .header-right {
       display: flex;
       align-items: center;
-      gap: 0.35rem;
+      gap: 0.5rem;
       flex-wrap: nowrap;
       height: 100%;
       overflow: hidden;
     }
 
     .indicator-card {
-      padding: 0.2rem 0.45rem;
-      min-width: 85px;
-      max-height: 44px;
-      font-size: 0.75rem;
-      line-height: 1.05;
+      padding: 0.35rem 0.6rem;
+      min-width: 95px;
+      max-height: 54px;
+      font-size: 0.82rem;
+      line-height: 1.15;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -215,28 +215,28 @@
     }
 
     .indicator-card .label {
-      font-size: 0.55rem;
-      line-height: 1;
-      opacity: 0.75;
-      margin-bottom: 0.05rem;
+      font-size: 0.62rem;
+      line-height: 1.05;
+      opacity: 0.8;
+      margin-bottom: 0.12rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
 
     .indicator-card .value {
-      font-size: 0.92rem;
+      font-size: 1.05rem;
       font-weight: 700;
-      line-height: 1.1;
+      line-height: 1.15;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
 
     .indicator-card .change {
-      font-size: 0.58rem;
-      line-height: 1;
-      margin-top: 0.03rem;
+      font-size: 0.68rem;
+      line-height: 1.1;
+      margin-top: 0.08rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -245,15 +245,17 @@
     @media (max-width: 1024px) {
       .header-container {
         flex-wrap: wrap;
-        gap: 0.5rem;
+        gap: 0.6rem;
+        height: auto;
+        max-height: none;
       }
       .header-right {
         flex-wrap: wrap;
-        gap: 0.3rem;
+        gap: 0.4rem;
       }
       .indicator-card {
-        min-width: 78px;
-        padding: 0.2rem 0.4rem;
+        min-width: 85px;
+        padding: 0.3rem 0.55rem;
       }
     }
   </style>
@@ -291,7 +293,7 @@
           <div class="label">김치프리미엄 (USDT)</div>
           <div class="value positive">+1.88%</div>
         </div>
-        <button id="theme-toggle" class="p-1.5 rounded-lg hover:bg-gray-800 transition">
+        <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
           <i id="theme-icon" class="fas fa-moon text-lg"></i>
         </button>
       </div>
